syntax = "proto3";

package api;

message Ok {
  string message = 1;
}

message Empty {}


message CmdGenerateToken {
  string userID = 1;
}

message CmdValidateToken {
  string token = 1;
}

message ResGenerateToken {
  string token = 1;
}

message ResValidateToken {
  string userID = 1;
}

service Okdb {
  rpc SayOk(Empty) returns (Ok) {}
  rpc GenerateToken(CmdGenerateToken) returns (ResGenerateToken) {}
  rpc ValidateToken(CmdValidateToken) returns (ResValidateToken) {}
}